fixing button loading wobble and increasing legibility of small buttons

--- a/chime/static/sass/components/_buttons.scss
+++ b/chime/static/sass/components/_buttons.scss
@@ -4,12 +4,12 @@
 	text-decoration: none;
 	background: $color-grey-100;
 	border: 1px solid $color-grey-300;
-	color: $color-grey-800;
+	color: $color-grey-700;
 	font-family: $font-sans;
-	font-size: $small-font-size;
-	font-weight: 600;
+	font-size: $base-font-size;
+	font-weight: 400;
 	border-radius: $border-radius;
-	padding: .3em .8em;
+	padding: .1em .6em;
 	position: relative;
 
 	&:hover {
@@ -28,19 +28,19 @@
 		border-color: $color-grey-200;
 		background-color: $color-grey-100;
 		cursor: default;
+		color: $color-grey-500;
 	}
 
 	&.is-loading {
 		@include transition-duration(.1s);
-		padding-right: 1em;
+		padding-right: .5em;
 		&:after {
-			@include animation(spinner 1s linear);
-			@include animation-iteration-count(infinite);
+			@include animation(spinner 1s infinite steps(8));
 			display: inline-block;
 			margin-left: .5em;
-			width: 1em;
-			font-family: "FontAwesome";
 			content: '\f110';
+			font: normal normal normal 14px/1 FontAwesome;
+			margin-top: .1em;
 		}
 	}
 
@@ -127,10 +127,22 @@
 	font-size: $base-font-size;
 	padding: .5em 1em;
 	font-weight: 400;
+	&.is-loading {
+		padding-right: 1em;
+		&:after {
+			margin-top: 0;
+		}
+	}
 }
 
 .button--large {
 	font-size: $h4-font-size;
 	padding: .5em 1em;
 	font-weight: 400;
+	&.is-loading {
+		padding-right: 1em;
+		&:after {
+			margin-top: 0;
+		}
+	}
 }
