--- a/chime/static/sass/core/_animations.scss
+++ b/chime/static/sass/core/_animations.scss
@@ -3,6 +3,6 @@
 		@include transform(rotate(0deg));
 	}
 	to {
-		@include transform(rotate(360deg));
+		@include transform(rotate(359deg));
 	}
 }
