--- a/chime/static/stylesheets/main.css
+++ b/chime/static/stylesheets/main.css
@@ -761,7 +761,7 @@ a:hover {
     -webkit-transform: rotate(0deg);
   }
   to {
-    -webkit-transform: rotate(360deg);
+    -webkit-transform: rotate(359deg);
   }
 }
 @-moz-keyframes spinner {
@@ -769,7 +769,7 @@ a:hover {
     -moz-transform: rotate(0deg);
   }
   to {
-    -moz-transform: rotate(360deg);
+    -moz-transform: rotate(359deg);
   }
 }
 @keyframes spinner {
@@ -781,11 +781,11 @@ a:hover {
     transform: rotate(0deg);
   }
   to {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
+    -webkit-transform: rotate(359deg);
+    -moz-transform: rotate(359deg);
+    -ms-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
 /*------------------------------------*\
@@ -802,8 +802,8 @@ a:hover {
 }
 
 /* line 6, ../sass/components/_toolbar.scss */
-.toolbar--left :first-child {
-  margin-left: 0;
+.toolbar--left .toolbar__item {
+  margin-right: 1em;
 }
 
 /* line 11, ../sass/components/_toolbar.scss */
@@ -811,15 +811,13 @@ a:hover {
   float: right;
 }
 /* line 13, ../sass/components/_toolbar.scss */
-.toolbar--right :last-child {
-  margin-right: 0;
+.toolbar--right .toolbar__item {
+  margin-left: 1em;
 }
 
 /* line 18, ../sass/components/_toolbar.scss */
 .toolbar__item {
   float: left;
-  margin-left: .5em;
-  margin-right: .5em;
 }
 
 /* line 1, ../sass/components/_dropdown-nav.scss */
@@ -1071,12 +1069,12 @@ input[type="submit"]:disabled:hover {
   text-decoration: none;
   background: #f5f5f5;
   border: 1px solid #e0e0e0;
-  color: #424242;
+  color: #616161;
   font-family: "Source Sans Pro", "Helvetiva", "Arial", sans-serif;
-  font-size: 12px;
-  font-weight: 600;
+  font-size: 14px;
+  font-weight: 400;
   border-radius: 3px;
-  padding: .3em .8em;
+  padding: .1em .6em;
   position: relative;
 }
 /* line 15, ../sass/components/_buttons.scss */
@@ -1098,27 +1096,25 @@ input[type="submit"]:disabled:hover {
   border-color: #eeeeee;
   background-color: #f5f5f5;
   cursor: default;
+  color: #9e9e9e;
 }
-/* line 33, ../sass/components/_buttons.scss */
+/* line 34, ../sass/components/_buttons.scss */
 .button.is-loading {
   -webkit-transition-duration: 0.1s;
   -moz-transition-duration: 0.1s;
   transition-duration: 0.1s;
-  padding-right: 1em;
+  padding-right: .5em;
 }
-/* line 36, ../sass/components/_buttons.scss */
+/* line 37, ../sass/components/_buttons.scss */
 .button.is-loading:after {
-  -webkit-animation: spinner 1s linear;
-  -moz-animation: spinner 1s linear;
-  animation: spinner 1s linear;
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
+  -webkit-animation: spinner 1s infinite steps(8);
+  -moz-animation: spinner 1s infinite steps(8);
+  animation: spinner 1s infinite steps(8);
   display: inline-block;
   margin-left: .5em;
-  width: 1em;
-  font-family: "FontAwesome";
   content: '\f110';
+  font: normal normal normal 14px/1 FontAwesome;
+  margin-top: .1em;
 }
 /* line 48, ../sass/components/_buttons.scss */
 .button:focus {
@@ -1220,12 +1216,28 @@ input[type="submit"]:disabled:hover {
   padding: .5em 1em;
   font-weight: 400;
 }
-
+/* line 130, ../sass/components/_buttons.scss */
+.button--medium.is-loading {
+  padding-right: 1em;
+}
 /* line 132, ../sass/components/_buttons.scss */
+.button--medium.is-loading:after {
+  margin-top: 0;
+}
+
+/* line 138, ../sass/components/_buttons.scss */
 .button--large {
   font-size: 18px;
   padding: .5em 1em;
   font-weight: 400;
+}
+/* line 142, ../sass/components/_buttons.scss */
+.button--large.is-loading {
+  padding-right: 1em;
+}
+/* line 144, ../sass/components/_buttons.scss */
+.button--large.is-loading:after {
+  margin-top: 0;
 }
 
 /* line 1, ../sass/components/_alerts.scss */
@@ -2322,7 +2334,7 @@ input[type="submit"]:disabled:hover {
 }
 /* line 9, ../sass/templates/_article-edit.scss */
 .edit-article__header .button {
-  margin-top: 1.6em;
+  margin-top: .7em;
 }
 
 /* line 14, ../sass/templates/_article-edit.scss */
